Update README for Programming of Services and Processes